fix pages display issues
